--- a/forum-web/src/main/resources/application.properties
+++ b/forum-web/src/main/resources/application.properties
@@ -15,9 +15,9 @@ server.port=9090
 # = DATA SOURCE
 # ===============================
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url = jdbc:postgresql://bdgeral.info.ufrn.br/sistemas_comum_8180_20150910
-spring.datasource.username = comum_user
-spring.datasource.password = comum_user
+spring.datasource.url = jdbc:postgresql://localhost/sistemas
+spring.datasource.username = sistemas
+spring.datasource.password = sistemas
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
